added navbar, and home card

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://kit.fontawesome.com/498214ab07.js" crossorigin="anonymous"></script>
     <title>Uwezo Sacco App</title>
   </head>
   <body>
